deployment/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway 
metadata:
  name: kgateway
  namespace: gateway-system
spec:
  gatewayClassName: kgateway
  listeners:
    - name: retail
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
